# retranslator

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/retranslator/: app.py  discord_sender.py  settings.py  telegram.py
