[tool.poetry]
name = "retranslator"
version = "0.1.0"
description = ""
authors = ["Vlad Radchenko <vradchenko@callpanda.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22"
click = "^8.1.3"
"discord.py" = "^2.0.1"
aiohttp = "^3.8.1"
pydantic = "^1.10"
sentry-sdk = "^1.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
retranslator = "retranslator.app:cli"